* Removed the unused ``_is_redirect()`` function from responses internals.
* Added `responses.matchers.request_kwargs_matcher`. This matcher allows you
  to match additional request arguments like `stream`.
* Changed all matchers output message in case of mismatch. Now message is aligned
  between Python2 and Python3 versions

0.14.0
------

* Added `responses.matchers`.
* Moved `responses.json_params_matcher` to `responses.matchers.json_params_matcher`
* Moved `responses.urlencoded_params_matcher` to
  `responses.matchers.urlencoded_params_matcher`
* Added `responses.matchers.query_param_matcher`. This matcher allows you
  to match query strings with a dictionary.
* Added `auto_calculate_content_length` option to `responses.add()`. When
  enabled, this option will generate a `Content-Length` header
  based on the number of bytes in the response body.

0.13.4
------

* Improve typing support
* Use URLs with normalized hostnames when comparing URLs.

0.13.3
------

* Switch from Travis to GHA for deployment.

0.13.2
------

* Fixed incorrect type stubs for `add_callback`

0.13.1
------

* Fixed packages not containing type stubs.

0.13.0
------

* `responses.upsert()` was added. This method will `add()` a response if one
  has not already been registered for a URL, or `replace()` an existing
  response.
* `responses.registered()` was added. The method allows you to get a list of
  the currently registered responses. This formalizes the previously private
  `responses.mock._matches` method.
* A more useful `__repr__` has been added to `Response`.
* Error messages have been improved.

0.12.1
------

* `responses.urlencoded_params_matcher` and `responses.json_params_matcher` now
  accept None to match empty requests.
* Fixed imports to work with new `urllib3` versions.
* `request.params` now allows parameters to have multiple values for the same key.
* Improved ConnectionError messages.

0.12.0
------

- Remove support for Python 3.4.

0.11.0
------
